# gekkota

./: .clang-format  .gitignore  CMakeLists.txt  README.md  gekkota-external.h  gekkota.h
audio-output/: AudioOutputService.cpp  CMakeLists.txt  audio.h
audio-segment/: CMakeLists.txt  audio-segment-hip.hpp  audio-segment.h  hip-calculations-process-audio.hpp  hip-calculations.c  hip-calculations.cpp  hip-calculations.h  hip-calculations.hpp  host-calculation.c  host-calculations.cpp  host-calculations.hpp  math-transitions.c  math-transitions.cpp  retrieve-seg.c  retrieve-seg.cpp  seg-management.c
block-sound-mem/: CMakeLists.txt  block-sound-mem.c  block-sound-mem.h
engine/: CMakeLists.txt  Engine.cpp  HipDeviceRenderHandler.cpp  HostRenderHandler.cpp  RenderSequential.cpp  engine.cpp  engine.h  engine_utils.cpp  set_params.cpp
error/: error.h
frontend-service/: CMakeLists.txt  FrontEndService.cpp  frontend-service.h  shm.c  wayland_helpers.c
gka-debug/: CMakeLists.txt  gka_debug.c  gka_debug.h
hip-device/: hip-device-mem-blocks.c
instrument/: CMakeLists.txt  Classical.cpp  Instrument.cpp  InstrumentRouter.cpp  KeysInstrument.cpp  Tone.cpp  dispatch.cpp  dispatch.h  instrument.h  tone.h
logger/: logger.h
math/: CMakeLists.txt  utils_global.cpp  utils_global.h
midi/: CMakeLists.txt  MidiService.cpp  accept.cpp  midi.h  types.h
plot-visual/: CMakeLists.txt  GkaChart.cpp  GkaChartDetail.cpp  GkaCrosshair.cpp  GkaPlot.cpp  plot-visual-pre.h  plot-visual.h
segdebug/: CMakeLists.txt  Makefile  segdebug.cpp
segpattern/: CMakeLists.txt  segpattern.c  segpattern.cpp  segpattern.h
service/: service.h
sound/: CMakeLists.txt  sound.c  sound.cpp  sound.h
tests/: debug.c  debug.h
tests/common/: test_common.h
tests/plot-visual/: CMakeLists.txt  TestGkaPlot.cpp
tests/segpattern/: CMakeLists.txt  TestSegPattern.cpp  debug.c
tests/sound/: CMakeLists.txt  TestSound.cpp
time/: CMakeLists.txt  gka_time.h  time_utils.c  time_utils.cpp
title/: CMakeLists.txt  Title.cpp  title.h
ui/: frontend.h  frontend.main.cpp
